--- a/src/main/resources/Translator.fxml
+++ b/src/main/resources/Translator.fxml
@@ -13,7 +13,7 @@
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" text="JavaToC" VBox.vgrow="ALWAYS">
+            <Label alignment="CENTER" contentDisplay="CENTER" text="ProceduralMyJavaToC" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
